GMM_Main/src/objects/Appendix_I__c.object
<CustomObject>
    <fields>
        <fullName>CNCS_Focs_Areas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CNCS Focus Areas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CNCS_Focus_Area__c</fullName>
        <defaultValue>&quot;In order to carry out Congress’s intent and to maximize the impact of investment in national service, CNCS has the following Focus Areas:&quot;</defaultValue>
        <label>CNCS Focus Areas</label>
        <length>71684</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Capacity_Building__c</fullName>
        <defaultValue>&quot;In addition to the Focus Areas described above, awards also will provide support for capacity building activities provided by national service participants. Capacity building activities are indirect services that enable CNCS-supported organizations to provide more, better, and sustained direct services. Capacity building activities cannot be solely intended to support the administration or operations of the organization.&quot;</defaultValue>
        <label>Capacity Building</label>
        <length>71684</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Capacty_Building__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Capacity Building</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments_CB__c</fullName>
        <label>Comments</label>
        <length>71684</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_DS__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_EO__c</fullName>
        <label>Comments</label>
        <length>71684</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_ES__c</fullName>
        <label>Comments</label>
        <length>71684</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_E__c</fullName>
        <label>Comments</label>
        <length>71684</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_HF__c</fullName>
        <label>Comments</label>
        <length>71684</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_VMF__c</fullName>
        <label>Comments</label>
        <length>71684</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disaster_Services1__c</fullName>
        <formula>IF( Disaster_Services__c = true, &quot;Disaster Services - Grant activities will provide support to increase the preparedness of individuals for disasters, improve individuals’ readiness to respond to disasters, help individuals recover from disasters, and/or help individuals mitigate disasters. Grantees also have the ability to respond to national disasters under CNCS cooperative agreements and FEMA mission assignments.&quot;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disaster Services</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disaster_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disaster Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disaster_Servicestxt__c</fullName>
        <defaultValue>&quot;Awards will help individuals and communities prepare for, respond to, recover from, and mitigate the effects of disasters and increase community resiliency.&quot;</defaultValue>
        <label>Disaster Services</label>
        <length>71684</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Economic_Opportunity1__c</fullName>
        <formula>IF( Economic_Opportunity__c = true ,&quot;Economic Opportunity - Grants will provide support and/or facilitate access to services and resources that contribute to the improved economic well-being and security of economically disadvantaged people; help economically disadvantaged people, including youth identified in My Brother’s Keeper to have improved access to services that enhance financial literacy; transition into or remain in safe, healthy, affordable housing; and/or have improved employability leading to increased success in becoming employed.&quot;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Economic Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Economic_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Grants will provide support and/or facilitate access to services and resources that contribute to the improved economic well-being and security of economically disadvantaged people; help economically disadvantaged people.</inlineHelpText>
        <label>Economic Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Economic_Opportunitytxt__c</fullName>
        <defaultValue>&quot;Awards will provide support and/or facilitate access to services and resources that contribute to the improved economic well-being and security of economically disadvantaged individuals.&quot;</defaultValue>
        <label>Economic Opportunity</label>
        <length>71684</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Education1__c</fullName>
        <formula>IF( Education__c = true,&quot;Education - Grants will provide support and/or facilitate access to services and resources that contribute to improved educational outcomes for economically disadvantaged children; improved school readiness for economically disadvantaged young children; improved educational and behavioral outcomes of students in low-achieving elementary, middle, and high schools; and/or support economically disadvantaged students prepare for success in post-secondary educational institutions.&quot;
 , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Education</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Educationtxt__c</fullName>
        <defaultValue>&quot;Awards will provide support and/or facilitate access to services and resources that contribute to improved educational outcomes for economically disadvantaged people, especially children. CNCS is particularly interested in program designs that support youth engagement and service learning as strategies to achieve high educational outcomes. &quot;</defaultValue>
        <label>Education</label>
        <length>71684</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Environmental_Stewardship1__c</fullName>
        <formula>IF( Environmental_Stewardship__c = true,&quot;Environmental Stewardship - Grants will provide support for increased individual behavioral change leading to increased energy efficiency, renewable energy use, and ecosystem improvements particularly for economically disadvantaged households and communities. Grant activities will decrease energy and water consumption; improve at-risk ecosystems; increase behavioral changes that lead directly to decreased energy and water consumption or improved at-risk ecosystems; and/or increase green training opportunities that may lead to decreased energy and water consumption or improved at-risk ecosystems.&quot; , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Environmental Stewardship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environmental_Stewardship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Environmental Stewardship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Environmental_Stewardshiptxt__c</fullName>
        <defaultValue>&quot;Awards will provide services – including efforts to change citizen behavior – that increase energy and water efficiency and renewable energy use or that improve at-risk ecosystems, especially in economically disadvantaged households and communities.&quot;</defaultValue>
        <label>Environmental Stewardship</label>
        <length>71684</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Healthy_Futures1__c</fullName>
        <formula>IF( Healthy_Futures__c = true, &quot;Healthy Futures - Grants will provide support for activities that will improve access to primary and preventive health care for communities served by CNCS-supported programs; increase seniors’ ability to remain in their own homes with the same or improved quality of life for as long as possible; and/or increase physical activity and improve nutrition in youth with the purpose of reducing childhood obesity.&quot; , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Healthy Futures</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Healthy_Futures__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Healthy Futures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Healthy_Futurestxt__c</fullName>
        <defaultValue>&quot;Awards will provide support for health needs within communities, including access to care, aging in place, and addressing childhood obesity.&quot;</defaultValue>
        <label>Healthy Futures</label>
        <length>71684</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notice_ID__c</fullName>
        <label>Notice</label>
        <referenceTo>Notice__c</referenceTo>
        <relationshipLabel>Appendix I</relationshipLabel>
        <relationshipName>Appendix_I</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Others1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Others</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Others__c</fullName>
        <label>Others</label>
        <length>71684</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Responses_CB__c</fullName>
        <label>Responses</label>
        <length>71684</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Responses_DS__c</fullName>
        <label>Responses</label>
        <length>71684</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Responses_EO__c</fullName>
        <label>Responses</label>
        <length>71684</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Responses_ES__c</fullName>
        <label>Responses</label>
        <length>71684</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Responses_E__c</fullName>
        <label>Responses</label>
        <length>71684</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Responses_HF__c</fullName>
        <label>Responses</label>
        <length>71684</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Responses_VMF__c</fullName>
        <label>Responses</label>
        <length>71684</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Veterans_and_Military_Families1__c</fullName>
        <formula>IF( Veterans_and_Military_Families__c = true,&quot;Veterans and Military Families - Grants will positively impact the quality of life of veterans and improve military family strength; increase the number of veterans, military service members, and their families served by CNCS-supported programs; and/or increase the number of veterans and military family members engaged in service through CNCS-supported programs.&quot; , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Veterans and Military Families</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veterans_and_Military_Families__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Veterans and Military Families</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Veterans_and_Military_Familiestxt__c</fullName>
        <defaultValue>&quot;Awards will improve the quality of life of veterans and improve military family strength. &quot;</defaultValue>
        <label>Veterans and Military Families</label>
        <length>71684</length>
        <type>LongTextArea</type>
    </fields>
    <label>Appendix I</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Focus Areas ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appendix I</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>